# skald

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  default.config.yaml  docker.md  requirements.txt  run-docker.sh  run.bat  run.sh
agents/: README.md
agents/architect/: AGENT.md  meta.json
agents/blueprint/: AGENT.md
agents/code-explorer/: meta.json
agents/common/: core_rules.md  memory.md  tools.md
agents/engineer/: AGENT.md  meta.json
agents/explorer/: AGENT.md  meta.json
agents/generalist/: AGENT.md  meta.json
agents/main/: AGENT.md  meta.json
agents/project-coordinator/: AGENT.md  meta.json
agents/qa/: AGENT.md  meta.json
agents/researcher/: AGENT.md  meta.json
agents/software-architect/: AGENT.md  meta.json
agents/software-engineer/: meta.json
agents/spec-writer/: AGENT.md  meta.json
agents/tech-lead/: AGENT.md  meta.json
agents/tic/: AGENT.md  meta.json
agents/tinker/: meta.json
agents/worker/: AGENT.md  meta.json
crates/core-api/: Cargo.toml
crates/core-api/src/: bus.rs  chat_hub.rs  chatbot.rs  config_property.rs  events.rs  image_generate.rs  inbox.rs  interface_tool.rs  lib.rs  location.rs  memory.rs  plugin.rs  provider.rs  remote.rs  secrets.rs  system_bus.rs  tool.rs  transcribe.rs  tts.rs
crates/honcho-client/: Cargo.toml
crates/llm-client/: Cargo.toml
crates/llm-client/src/: anthropic.rs  lib.rs  lm_studio.rs  ollama.rs  openai.rs
crates/mcp-client/: Cargo.toml
crates/plugin-comfyui/: Cargo.toml
crates/plugin-elevenlabs/: Cargo.toml
crates/plugin-honcho/: Cargo.toml
crates/plugin-honcho/src/: lib.rs
crates/plugin-mobile-connector/: Cargo.toml
crates/plugin-mobile-connector/src/: agent.rs  app.rs  db.rs  identity.rs  lib.rs  notifier.rs  pairing.rs  payloads.rs  proxy.rs  router.rs  state.rs  tools.rs  ws.rs
crates/plugin-tailscale-remote/: Cargo.toml
crates/plugin-tailscale-remote/src/: lib.rs  tailscale.rs  tailscale_sys.rs
crates/plugin-telegram-bot/: Cargo.toml
crates/plugin-telegram-bot/src/: attachments.rs  auth.rs  events.rs  handlers.rs  helpers.rs  lib.rs  tools.rs
crates/plugin-transcribe-whisper-local/: Cargo.toml
crates/plugin-transcribe-whisper-local/src/: lib.rs
crates/plugin-tts-orpheus-3b/: Cargo.toml
crates/skald-relay-client/: Cargo.toml
crates/skald-relay-client/src/: client.rs  config.rs  db.rs  events.rs  identity.rs  lib.rs  pairing.rs  pipe.rs  state.rs  ws.rs
crates/skald-relay-client/tests/: integration.rs
crates/skald-relay-common/: Cargo.toml  build.rs
crates/skald-relay-server/: Cargo.toml
crates/skald-relay-server/src/: auth.rs  config.rs  lib.rs  limits.rs  main.rs  push.rs  routing.rs  store.rs  types.rs  ws.rs
crates/skald-relay-server/tests/: protocol.rs
docs/: agents.md  approval.md  architecture.md  chat-event-bus.md  comfyui-workflow-format.md  compaction.md  cron.md  database.md  frontend.md  gcal-mcp.md  gmail-mcp.md  gmaps-mcp.md  honcho.md  image-generate.md  index.md  llm-clients.md  logging-config.md  mcp.md  memory.md  mobile-connector.md  notifications.md  plugins.md  projects.md  remote.md  secrets.md  self-rewriting.md  session.md  skills.md  telegram.md  tools.md  transcribe-providers.md  tts-providers.md  whatsapp-mcp.md  whisper-local.md  workspace-crates.md
docs/approval/: index.md
docs/crates/: index.md  workspace.md
docs/mcp/: index.md
docs/plugins/: honcho.md  index.md  mobile-connector.md  telegram.md  whisper-local.md
docs/providers/: image.md  index.md  transcribe.md  tts.md
docs/relay/: describe-and-push.md  index.md  payloads.md  pipe.md
docs/session/: index.md  run-context.md
honcho/: .env.example  README.md  docker-compose.yml
scripts/: elicitation_demo_mcp.py  gcal_mcp_server.py  gcal_oauth_setup.py  gmail_mcp_server.py  gmail_oauth_setup.py  gmaps_mcp_server.py  honcho_backfill.py  inspect_llm_requests.py  ssh_mcp_server.py
scripts/whatsapp_mcp/: index.js  package-lock.json  package.json
skills/: index.md
skills/ics2json/: SKILL.md  ics2json.py
skills/keynote-applescript/: 01-basic.md  02-layout.md  03-slide-master.md  04-shapes-media.md  05-recipes.md  SKILL.md
skills/pdf2text/: SKILL.md  pdf2text.py
src/: boot.rs  compactor.rs  config.rs  main.rs  secrets.rs  server.rs  service_manager.rs
src/api/: agents.rs  approval.rs  cron.rs  files.rs  image_generate_models.rs  images.rs  inbox.rs  llm.rs  mcp.rs  mod.rs  plugins.rs  sessions.rs  transcribe_models.rs  tts_models.rs  ws.rs
src/approval/: mod.rs
src/chat_hub/: mod.rs
src/chatbot/: logging.rs
src/clarification/: mod.rs
src/core/: agents.rs  chat_event_bus.rs  compactor.rs  config.rs  config_store.rs  events.rs  inbox.rs  mod.rs  service_manager.rs  skald.rs  tool_catalog.rs
src/cron/: mod.rs
src/db/: approval_rules.rs  chat_llm_tools.rs  chat_sessions.rs  chat_sessions_stack.rs  config.rs  job_runs.rs  llm_requests.rs  mcp_events.rs  mod.rs  plugins.rs  sources.rs  stack_mcp_grants.rs
src/frontend/: config.rs  mod.rs  server.rs
src/image_generate/: db.rs  manager.rs  mod.rs  openrouter_image.rs
src/llm/: db.rs  manager.rs  mod.rs
src/location/: mod.rs
src/mcp/: mod.rs
src/memory/: mod.rs
src/plugin/: mod.rs
src/provider/: mod.rs
src/session/: manager.rs
src/tic/: mod.rs
src/tools/: ast_outline.rs  configure_plugin.rs  cron_jobs.rs  exec.rs  image_generate.rs  list_agents.rs  list_mcp.rs  list_plugins.rs  list_secrets.rs  mod.rs  notify.rs  register_mcp.rs  restart.rs  set_secret.rs  show_mcp_tools.rs  toggle_mcp.rs  toggle_plugin.rs
src/transcribe/: db.rs  manager.rs  mod.rs
src/tts/: db.rs  manager.rs  mod.rs  openai_tts.rs
web/: app.js  index.html  manifest.json  mobile.html
web/components/: agent-inbox.js  agent-profiles.js  agents.js  approval-groups.js  approval-rules.js  config-page.js  copilot-render.js  copilot.js  cron-jobs.js  editor.js  file-viewer-page.js  home-page.js  llm-providers.js  llm-request-detail.js  llm-requests.js  mobile-app.js  models-hub.js  models-image.js  models-llm.js  models-transcribe.js  models-tts.js  session-detail.js  sidebar.js  (+2 more)
(+213 files in other folders)
