[package]
name = "core-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["sync"] }
chrono       = { version = "0.4", default-features = false, features = ["clock", "std"] }
async-trait  = "0.1"
anyhow       = "1"
axum         = { version = "0.8", default-features = false }
