[package]
name = "llm-client"
version = "0.1.0"
edition = "2024"

[dependencies]
core-api    = { path = "../core-api" }
reqwest     = { version = "0.13", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
async-trait = "0.1"
anyhow      = "1"
tracing     = "0.1"
