[package]
name = "plugin-honcho"
version = "0.1.0"
edition = "2024"

[dependencies]
core-api      = { path = "../core-api" }
honcho-client = { path = "../honcho-client" }
anyhow        = "1"
async-trait   = "0.1"
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
tokio-util    = { version = "0.7", features = ["rt"] }
tracing       = "0.1"
