[package]
name = "plugin-tailscale-remote"
version = "0.1.0"
edition = "2024"

[dependencies]
core-api      = { path = "../core-api" }
anyhow        = "1"
async-trait   = "0.1"
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
tokio-util    = { version = "0.7", features = ["rt"] }
tracing       = "0.1"
axum          = { version = "0.8" }
tailscale     = { version = "0.3.3", optional = true, features = ["axum"] }

[features]
default = ["remote-tailscale"]
remote-tailscale = ["dep:tailscale"]
