[package]
name = "plugin-transcribe-whisper-local"
version = "0.1.0"
edition = "2024"

[dependencies]
core-api    = { path = "../core-api" }
anyhow      = "1"
async-trait = "0.1"
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
whisper-rs  = { version = "0.16.0" }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs  = { version = "0.16.0", features = ["metal"] }
hound       = "3"
